--- a/css/styles.css
+++ b/css/styles.css
@@ -1226,8 +1226,8 @@ body {
         0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     }
     .header-container {
-      padding-left: 156px;
-      padding-right: 156px;
+      /* padding-left: 156px;
+      padding-right: 156px; */
       padding-top: 0;
     }
     .header-logo {
